--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flame: ^1.1.1
   flame_tiled: ^1.4.0
   flame_texturepacker: ^2.0.0+2
+  flame_audio: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
     - assets/images/ground_tiles/
     - assets/images/gems/
     - assets/
+    - assets/audio/sfx/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
