--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Arcade
+      fonts: 
+        - asset: assets/fonts/ARCADECLASSIC.TTF
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
