--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flame_tiled: ^1.4.0
   flame_texturepacker: ^2.0.0+2
   flame_audio: ^1.0.2
+  google_mobile_ads: ^2.3.0
 
 dev_dependencies:
   flutter_test:
